# nikitoz-info

./: .gitignore  docker-compose.yaml  dockerfile  env_dist  pyproject.toml
src/: __main__.py  app.py  settings.py  types.py
