[tool.poetry]
name = "nikitoz"
version = "0.1.0"
description = ""
authors = ["x <x>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrogram = "^2.0.106"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
tgcrypto = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
